4.47

- Added: Teamkill forgive system (only available when mission revive and revive spectating is on)
- Fixed: Unconscious state and dialog doesn't end if a player has to go to jail
- Fixed: Jail escape counter was increased every second instead of just once per jail time
- Fixed: Destroying a vehicle of the other player side caused a script error in the TT version
- Updated: Global Mobilization Mod versions with 1.3 assets like Marder SPZ