@@ -24,7 +24,9 @@ _ctrl lbSetCurSel 0;
 d_current_ai_units = (units group player) select {!(_x call d_fnc_isplayer) && {alive _x}};
 d_current_ai_num = count d_current_ai_units;
 
-(_dspx displayCtrl 1030) ctrlSetText format [localize "STR_DOM_MISSIONSTRING_693", d_current_ai_num, d_max_ai];
+private _max_ai = [round linearConversion [0, 20, 21 - count d_allplayers, 0, d_max_ai, true], d_max_ai] select !d_ai_dyn_recruit;
+
+(_dspx displayCtrl 1030) ctrlSetText format [localize "STR_DOM_MISSIONSTRING_693", d_current_ai_num, _max_ai];
 
 _ctrl = _dspx displayCtrl 1001;
 lbClear _ctrl;
