@@ -39,3 +39,5 @@ STR_DOM_MISSIONSTRING_2064
 STR_DOM_MISSIONSTRING_2065
 STR_DOM_MISSIONSTRING_2066
 STR_DOM_MISSIONSTRING_2067
+STR_DOM_MISSIONSTRING_2068
+STR_DOM_MISSIONSTRING_2069
