@@ -174,3 +174,5 @@ STR_DOM_MISSIONSTRING_2063
 STR_DOM_MISSIONSTRING_2064
 STR_DOM_MISSIONSTRING_2065
 STR_DOM_MISSIONSTRING_2066
+STR_DOM_MISSIONSTRING_2068
+STR_DOM_MISSIONSTRING_2069
